--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,15 @@
 --- #YAML:1.0
 name:                Lexical-Persistence
-version:             0.96
+version:             0.97
 abstract:            Persistent, continuation-like contexts for lexical variables.
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.30_01
-author:              Rocco Caputo <rcaputo@cpan.org>
+generated_by:        ExtUtils::MakeMaker version 6.31
 distribution_type:   module
 requires:     
     Devel::LexAlias:               0.04
     PadWalker:                     1.1
 meta-spec:
-    url: <http://module-build.sourceforge.net/META-spec-new.html>;
-    version: 1.1
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Rocco Caputo <rcaputo@cpan.org>
