--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,26 @@
 --- #YAML:1.0
-name:                Lexical-Persistence
-version:             0.98
-abstract:            Persistent, continuation-like contexts for lexical variables.
-license:             perl
-author:              
+name:               Lexical-Persistence
+version:            1.01
+abstract:           Persistent, continuation-like contexts for lexical variables.
+author:
     - Rocco Caputo <rcaputo@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    Devel::LexAlias:               0.04
-    PadWalker:                     1.1
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Devel::LexAlias:  0.04
+    PadWalker:        1.1
+resources:
+    license:     http://dev.perl.org/licenses/
+    repository:  http://thirdlobe.com/svn/lex-per/trunk
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
