--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,30 @@
---- #YAML:1.0
-name:               Lexical-Persistence
-version:            1.020
-abstract:           Persistent, continuation-like contexts for lexical variables.
+---
+abstract: 'Persistent lexical variable values for arbitrary calls.'
 author:
-    - Rocco Caputo <rcaputo@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Rocco Caputo <rcaputo@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Devel::LexAlias:  0.04
-    PadWalker:        1.1
-resources:
-    license:     http://dev.perl.org/licenses/
-    repository:  http://github.com/rcaputo/lexical-persistence
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+  Carp: 1.26
+  Scalar::Util: 1.29
+  Test::More: 0.98
+  constant: 0
+  perl: 5.004
+configure_requires:
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Lexical-Persistence
+requires:
+  Devel::LexAlias: 0.05
+  PadWalker: 1.96
+  strict: 0
+  warnings: 0
+resources:
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Lexical-Persistence
+  homepage: http://search.cpan.org/dist/Lexical-Persistence/
+  license: http://dev.perl.org/licenses/
+  repository: git://github.com/rcaputo/lexical-persistence.git
+version: 1.022
